<resources>
    <string name="app_name">Barcode Scanner</string>
    <string name="camera_permission_denied">You have denied access to the camera.\nYou must authorize it to scan a barcode.</string>
    <string name="close_dialog_label">Close</string>
    <string name="yes_label">Yes</string>
    <string name="no_label">No</string>
    <string name="go_to_dialog_label">Enter website</string>
    <string name="error">Error</string>
    <string name="image_view_description_flag">Flag</string>
    <string name="image_view_description_logo">Logo</string>
    <string name="image_view_description_type_icon">Type</string>
    <string name="image_view_description_bar_code">Barcode</string>
    <string name="image_view_description_icon">Icon</string>
    <string name="image_view_description_product_front">Product picture</string>
    <string name="image_view_description_nutriscore">NUTRI-SCORE</string>
    <string name="image_view_description_nova_group">NOVA GROUP</string>
    <string name="image_view_description_eco_score">ECO SCORE</string>
    <string name="image_view_description_background">Background</string>
    <string name="image_view_description_image">Image</string>
    <string name="slider_description_zoom">Zoom</string>
    <string name="title_scan">Scan</string>
    <string name="title_history">History</string>
    <string name="title_generate">Generate</string>
    <string name="title_settings">Settings</string>
    <string name="title_qr_code_creator">Generate a QR Code</string>
    <string name="title_bar_code_creator">Generate a barcode</string>
    <string name="create_qr_from_clipboard">Generate a QR Code from the clipboard</string>
    <string name="information_label">Information</string>
    <string name="barcode_label">Barcode</string>
    <string name="download_from_api_label">Download from APIs</string>
    <string name="menu_more">More</string>
    <string name="barcode_qr_code_label">QR Code</string>
    <string name="barcode_data_matrix_label">Data Matrix</string>
    <string name="barcode_pdf_417_label">PDF 417</string>
    <string name="barcode_aztec_label">AZTEC</string>
    <string name="barcode_ean_13_label">EAN 13</string>
    <string name="barcode_ean_8_label">EAN 8</string>
    <string name="barcode_upc_a_label">UPC A</string>
    <string name="barcode_upc_e_label">UPC E</string>
    <string name="barcode_code_128_label">Code 128</string>
    <string name="barcode_code_93_label">Code 93</string>
    <string name="barcode_code_39_label">Code 39</string>
    <string name="barcode_codabar_label">Codabar</string>
    <string name="barcode_itf_label">ITF</string>
    <string name="qr_code_type_name_text">Text</string>
    <string name="qr_code_type_name_web_site">Website</string>
    <string name="qr_code_type_name_contact">Contact</string>
    <string name="qr_code_type_name_epc">EPC QR Code</string>
    <string name="qr_code_type_name_mail">Mail</string>
    <string name="qr_code_type_name_sms">SMS</string>
    <string name="qr_code_type_name_phone">Phone number</string>
    <string name="qr_code_type_name_geographic_coordinates">Geographic coordinates</string>
    <string name="qr_code_type_name_agenda">Agenda</string>
    <string name="qr_code_type_name_wifi">Wi-Fi</string>
    <string name="qr_code_type_name_apps">Application</string>
    <string name="bar_code_type_unknown_product">Product</string>
    <string name="bar_code_type_food">Food Product</string>
    <string name="bar_code_type_pet_food">Pet Food</string>
    <string name="bar_code_type_beauty">Cosmetic Product</string>
    <string name="bar_code_type_music">Music</string>
    <string name="bar_code_type_unknown_music_album_title">Album title unknown</string>
    <string name="bar_code_type_book">Book</string>
    <string name="bar_code_type_unknown_book_title">Book title unknown</string>
    <string name="bar_code_type_industrial">Industrial Code</string>
    <string name="bar_code_type_unknown_matrix">Matrix Code</string>
    <string name="bar_code_type_name_unknown">Unknown</string>
    <string name="qr_code_error_correction_level_label">Error correction level</string>
    <string name="qr_code_error_correction_level_settings_label">Error correction level (QR Code)</string>
    <string name="qr_code_error_correction_level_name_low">Low (~7%)</string>
    <string name="qr_code_error_correction_level_name_medium">Medium (~15%)</string>
    <string name="qr_code_error_correction_level_name_quartile">Quartile (~25%)</string>
    <string name="qr_code_error_correction_level_name_high">High (~30%)</string>
    <string name="label_history_empty">No elements scanned…</string>
    <string name="snack_bar_message_item_deleted">The product \"%1$s\" has been deleted from history.</string>
    <string name="snack_bar_message_items_deleted">Items deleted from history.</string>
    <string name="popup_message_confirmation_delete_history">Delete all history?</string>
    <string name="popup_message_confirmation_delete_selected_items_history">Delete selected items?</string>
    <string name="menu_item_history_delete">Delete history</string>
    <string name="menu_item_history_delete_from_history">Delete from history</string>
    <string name="menu_item_history_removed_from_history">Removed from history!</string>
    <string name="menu_item_history_add_in_history">Add in the history</string>
    <string name="menu_item_history_added_in_history">Added in the history!</string>
    <string name="delete_label">Delete</string>
    <string name="cancel_label">Cancel</string>
    <string name="record_label">Save</string>
    <string name="export_label">Export</string>
    <string name="export_csv_label">Export as CSV</string>
    <string name="export_json_label">Export as JSON</string>
    <string name="import_json_label">Import (JSON)</string>
    <string name="snack_bar_message_file_export_success">File saved!</string>
    <string name="snack_bar_message_file_export_error">An error has occurred! File not saved.</string>
    <string name="snack_bar_message_file_import_success">File imported!</string>
    <string name="snack_bar_message_file_import_error">An error has occurred! File not imported.</string>
    <string name="scan_cancel_label">Scan cancelled!</string>
    <string name="scan_error_exception_label">An error occurred: %1$s</string>
    <string name="flash_label">Flash</string>
    <string name="scan_from_image_label">Image</string>
    <string name="intent_filter_scan_by_image">Scan image</string>
    <string name="scan_information_label">Aim at barcode to scan</string>
    <string name="barcode_information_search_label">Searching…</string>
    <string name="scan_error_label">Error during scanning!</string>
    <string name="scan_error_short_information_label">An error occurred while searching for information!</string>
    <string name="barcode_scanned_label">%1$s scanned!</string>
    <string name="barcode_found_on_label">Found on %1$s!</string>
    <string name="barcode_not_found_on_api_label">No information found on %1$s.</string>
    <string name="no_internet_permission">You don\'t have permission to access the Internet.</string>
    <string name="about_barcode_information_label">Information on barcode</string>
    <string name="about_barcode_label">About barcode</string>
    <string name="about_barcode_format_label">Format: %1$s</string>
    <string name="about_barcode_content_label">Barcode: %1$s</string>
    <string name="about_barcode_origin_label">Origin: </string>
    <string name="product_search_label">Product search</string>
    <string name="no_product_found_label">No product has been found!</string>
    <string name="warning_label">Warning</string>
    <string name="scan_error_information_label">An error occurred while searching information on remote API… Please verify your internet connection and application\'s permissions! If problem persists, it should be a server problem.</string>
    <string name="scan_error_internet_information_label">No information on product retrieved cause you don\'t seem to be connected on the internet!</string>
    <string name="scan_error_message_label">Error message: </string>
    <string name="overview_tab_label">Overview</string>
    <string name="ingredients_label">Ingredients</string>
    <string name="matrix_email_recipient_label">Recipient</string>
    <string name="matrix_email_cc_label">CC</string>
    <string name="matrix_email_bcc_label">BCC</string>
    <string name="matrix_subject_label">Subject</string>
    <string name="matrix_body_label">Message</string>
    <string name="matrix_wifi_ssid_label">SSID</string>
    <string name="matrix_wifi_password_label">Password</string>
    <string name="matrix_wifi_encryption_label">Encryption</string>
    <string name="matrix_wifi_is_hidden_label">Hidden</string>
    <string name="matrix_uri_url_label">URL</string>
    <string name="matrix_uri_malicious_label">URL may be malicious…</string>
    <string name="save_label">Save</string>
    <string name="share_label">Share</string>
    <string name="share_image_label">Share image</string>
    <string name="share_text_label">Share text</string>
    <string name="preferences_appearance_title">Appearance</string>
    <string name="preferences_theme_label">Theme</string>
    <string name="preferences_color">Main Color</string>
    <string name="preferences_switch_scan_search_on_api_label">Query remote API automatically</string>
    <string name="preferences_scan_title">Scan</string>
    <string name="preferences_switch_scan_use_camera_x_api_label">Use CameraX API</string>
    <string name="preferences_switch_scan_vibrate_label">Vibrate when scan is successful</string>
    <string name="preferences_switch_scan_bip_label">Play sound when scan is successful</string>
    <string name="preferences_switch_scan_screen_rotation_label">Disable automatic rotation during scan</string>
    <string name="preferences_switch_scan_barcode_copied_label">Copy scanned barcodes to clipboard</string>
    <string name="preferences_search_title">Search</string>
    <string name="preferences_search_engine">Search engine</string>
    <string name="preferences_about_title">About</string>
    <string name="preferences_about_permissions_label">Permissions</string>
    <string name="preferences_about_library_third_label">Third-party library</string>
    <string name="preferences_about_bdd_label">Database</string>
    <string name="preferences_source_code_label">Source code</string>
    <string name="preferences_color_key" translatable="false">preferences_color_key</string>
    <string name="preferences_theme_key" translatable="false">preferences_theme_key</string>
    <string name="preferences_switch_scan_search_on_api_key" translatable="false">preferences_switch_scan_search_on_api_key</string>
    <string name="preferences_switch_scan_use_camera_x_api_key" translatable="false">preferences_switch_scan_use_camera_x_api_key</string>
    <string name="preferences_switch_scan_vibrate_key" translatable="false">preferences_switch_scan_vibrate_key</string>
    <string name="preferences_switch_scan_bip_key" translatable="false">preferences_switch_scan_bip_key</string>
    <string name="preferences_switch_scan_screen_rotation_key" translatable="false">preferences_switch_scan_screen_rotation_key</string>
    <string name="preferences_switch_scan_barcode_copied_key" translatable="false">preferences_switch_scan_barcode_copied_key</string>
    <string name="preferences_search_engine_key" translatable="false">preferences_search_engine_key</string>
    <string name="preferences_about_permissions_key" translatable="false">preferences_about_permissions_key</string>
    <string name="preferences_about_library_third_key" translatable="false">preferences_about_library_third_key</string>
    <string name="preferences_about_bdd_key" translatable="false">preferences_about_bdd_key</string>
    <string name="preferences_source_code_key" translatable="false">preferences_source_code_key</string>
</resources>