<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.views.fragments.barcodeAnalysis.defaultBarcode.matrix.BarcodeMatrixUriFragment">

    <!-- Url -->
    <RelativeLayout
        android:id="@+id/fragment_barcode_matrix_uri_url_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fragment_barcode_matrix_uri_url_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:fontFamily="@font/roboto_black"
            android:text="@string/matrix_uri_url_label"
            android:textColor="?colorAccent"
            android:textSize="@dimen/sub_title_text_size" />

        <TextView
            android:id="@+id/fragment_barcode_matrix_uri_url_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_below="@id/fragment_barcode_matrix_uri_url_label"

            android:fontFamily="@font/roboto_medium_italic"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="@dimen/standard_text_size" />
    </RelativeLayout>

    <!--- Maybe Malicious -->
    <RelativeLayout
        android:id="@+id/fragment_barcode_matrix_uri_malicious_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x_large_margin"
        android:layout_below="@id/fragment_barcode_matrix_uri_url_layout">

        <ImageView
            android:id="@+id/fragment_barcode_matrix_uri_malicious_warning_icon_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerVertical="true"

            android:src="@drawable/baseline_warning_24"
            android:contentDescription="@string/image_view_description_icon"
            app:tint="?android:textColor" />

        <TextView
            android:id="@+id/fragment_barcode_matrix_uri_malicious_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/fragment_barcode_matrix_uri_malicious_warning_icon_image_view"

            android:text="@string/matrix_uri_malicious_label"
            android:fontFamily="@font/roboto_medium_italic"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="@dimen/standard_text_size" />

    </RelativeLayout>

</RelativeLayout>